# mission2teegarden-b

./: .gitattributes  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
macro/: Cargo.toml
macro/src/: lib.rs
map/: Cargo.toml  untitled.tmx
map/src/: commands.rs  lib.rs  main.rs  story.rs  tiles.rs  tutorial.rs
models/: Cargo.toml
models/src/: cards.rs  lib.rs
pc/: Cargo.toml  README.j2  build.rs  mission2teegarden-b.desktop
pc/assets/img/BaseTiles/: BaseTiles.tsx  grass.png~
pc/assets/img/ObjectTiles/: ObjectTiles.tsx
pc/assets/img/Player/: Player.tsx
pc/assets/level/: 001.tmx  002.tmx  003.tmx  004.tmx  005.tmx  006.tmx  007.tmx  008.tmx  009.tmx  010.tmx  011.tmx  template.tmx
pc/src/: README.rs  animations.rs  assets.rs  car.rs  cards.rs  cards_ev.rs  cards_ev.rs.orig  draw.rs  main.rs  menu.rs  sound.rs  story_display.rs  tiles.rs  update.rs  update.rs.orig  usb.rs
pybadge/: Cargo.toml
pybadge/.cargo/: config.toml
pybadge/src/: assets.rs  log.rs  main.rs  usb.rs
pybadge/src/activitys/: card_selecter.rs  driving.rs  game_over.rs  mod.rs  waiting.rs
src/: main.rs
