[package]
name = "m3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
pybadge-high = { git = "https://github.com/LuckyTurtleDev/pybadge-high.git", rev = "feaeea151aac8b3f2e4a57afa2076b62a925009a", version = "0.1.0", default-features = false, features = ["neopixel"] }
