[package]
name = "lab2"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
embedded-graphics = "0.7.1"
heapless = "0.7.16"
pybadge-high = { git = "https://github.com/LuckyTurtleDev/pybadge-high.git", rev = "feaeea151aac8b3f2e4a57afa2076b62a925009a", version = "0.1.0", default-features = false, features = ["neopixel", "time"] }
