[workspace]
members = ["pybadge", "pc", "models", "map", "macro"]
resolver = "2"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.dev.package.macroquad]
opt-level = 3

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = ["apt-get update && apt-get install --assume-yes libasound2-dev libudev-dev"]

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = ["apt-get update && apt-get install --assume-yes libasound2-dev libudev-dev"]
