[package]
workspace = ".."
name = "m3-map"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
log = "0.4.17"
m3-models = { version = "0.1.0", path = "../models" }
num_enum = "0.6.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tiled = "0.11.0"
