[package]
workspace = ".."
name = "m3-map"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
publish = false
repository = "https://github.com/LuckyTurtleDev/m3"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
log = "0.4.17"
m3-models = { version = "0.1.0", path = "../models", features = ["serde"] }
macroquad = "0.3.25"
num_enum = "0.6.1"
ron = "0.8.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tiled = "0.11.0"
