[package]
workspace = ".."
name = "mission2teegarden-b-map"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "Private implementation detail of mission2teegarden-b"
include = ["/src/**/*.rs", "/build.rs", "/LICENSE*", "/README.md"]
repository = "https://github.com/LuckyTurtleDev/mission2teegarden-b"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.71"
basic-toml = "0.1.2"
clap = { version = "4.2.5", features = ["derive"] }
log = "0.4.17"
mission2teegarden-b-models = { version = "0.2.0", path = "../models", features = ["serde"] }
num_enum = "0.6.1"
ron = "0.8.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tiled = "0.11.0"
