[package]
workspace = ".."
name = "m3-models"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive"] }
self-rust-tokenize = "0.3.3"
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
strum = { version = "0.24.1", default-features = false }
strum_macros = "0.24.3"
