[package]
workspace = ".."
name = "mission2teegarden-b-models"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/LuckyTurtleDev/mission2teegarden-b"
license = "AGPL-3.0-or-later"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive"] }
serde = { version = "1.0.163", optional = true, default-features = false, features = ["derive"] }
strum = { version = "0.25.0", default-features = false }
strum_macros = "0.25.0"
