[package]
workspace = ".."
name = "m3-pc"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
publish = false
repository = "https://github.com/LuckyTurtleDev/m3"
license = "AGPL-3.0-or-later"

[features]
default = []

[dependencies]
anyhow = "1.0.71"
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
log = "0.4.17"
m3-macro = { version = "0.1.0", path = "../macro" }
m3-map = { version = "0.1.0", path = "../map" }
m3-models = { version = "0.1.0", path = "../models" }
macroquad = { version = "0.3.25", features = ["log-rs"] }
my-env-logger-style = "0.1.0"
num_enum = "0.6.1"
once_cell = { version = "1.17.1", features = ["parking_lot"] }
serialport = "4.2.0"


# Enable optimizations in debug mode for macroquad only (requires Rust 1.41):
[profile.dev.package.macroquad]
opt-level = 3

[package.metadata.cross.target.x86_64-unknown-linux-musl]
pre-build = ["apt-get update && apt-get install --assume-yes libasound2-dev libudev-dev"]
