[package]
workspace = ".."
name = "mission2teegarden-b"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
publish = false
repository = "https://github.com/LuckyTurtleDev/mission2teegarden-b"
license = "AGPL-3.0-or-later"

[features]
default = []

[dependencies]
anyhow = "1.0.71"
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
clap = { version = "4.3.9", features = ["derive"] }
log = "0.4.17"
mission2teegarden-b-macro = { version = "0.1.0", path = "../macro" }
mission2teegarden-b-map = { version = "0.1.0", path = "../map" }
mission2teegarden-b-models = { version = "0.1.0", path = "../models" }
macroquad = { version = "0.3.25", default-features = false, features = ["log-rs"] }
my-env-logger-style = "0.1.0"
num_enum = "0.6.1"
once_cell = { version = "1.17.1", features = ["parking_lot"] }
rand = "0.8.5"
rodio = { version = "0.17.1", default-features = false, features = ["mp3"] }
serialport = "4.2.0"
macroquad-particles = "0.1.2"
rfd = "0.11.4"


[target.'cfg(not(windows))'.dependencies]
keepawake = "0.4.3"


# Enable optimizations in debug mode for macroquad only (requires Rust 1.41):
[profile.dev.package.macroquad]
opt-level = 3
