[package]
workspace = ".."
name = "m3-pybadge"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive"] }
embedded-graphics = "0.7.1"
embedded-sprites = "0.1.2"
heapless = "0.7.16"
konst = "0.3.5"
m3-models = { version = "0.1.0", path = "../models" }
pybadge-high = { version = "0.1.3", features = ["usb", "time", "bluescreen", "bluescreen-message-nightly"] , path = "../../pybadge-high/pybadge-high"}
strum = { version = "0.24.1", default-features = false }


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
