[package]
workspace = ".."
name = "m3-pybadge"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
publish = false
repository = "https://github.com/LuckyTurtleDev/m3"
license = "AGPL-3.0-or-later"

[dependencies]
pybadge-high = { version = "0.2.0", features = ["neopixel"] }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
