[package]
workspace = ".."
name = "m3-pybadge"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
publish = false
repository = "https://github.com/LuckyTurtleDev/m3"
license = "AGPL-3.0-or-later"

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive"] }
embedded-graphics = "0.7.1"
embedded-sprites = "0.1.2"
heapless = "0.7.16"
m3-models = { version = "0.1.0", path = "../models" }
pybadge-high = { version = "0.2.0", features = ["usb", "time", "bluescreen", "bluescreen-message-nightly", "neopixel"] }
strum = { version = "0.24.1", default-features = false }


# profiles for the non root package will be ignored,
# but after publishing to crates.io this is the workspace root
[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
